--- a/App.Admin/Views/Shared/_Index_LayoutEdit.cshtml
+++ b/App.Admin/Views/Shared/_Index_LayoutEdit.cshtml
@@ -10,6 +10,7 @@
     <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")" type="text/javascript"></script>
+    <script src ="@Url.Content("~/Scripts/jQuery.validator.js")" type="text/javascript"></script>
 </head>
 <body>
     @RenderBody()
