--- a/App.Admin/Areas/MIS/Views/Article/Index.cshtml
+++ b/App.Admin/Areas/MIS/Views/Article/Index.cshtml
@@ -1,8 +1,132 @@
-﻿
+﻿@using App.Admin.Core;
+@using App.Common;
+@using App.Models.Sys;
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Index_Layout.cshtml";
+    List<PermModel> perm = (List<PermModel>)ViewBag.Perm;
+    if (perm == null)
+    {
+        perm = new List<PermModel>();
+    }
 }
 
-<h2>Index</h2>
+<div class="mvctool">
+    <input id="txtQuery" type="text" class="searchText" />
+    @Html.ToolButton("btnQuery", "icon-search", Suggestion.Query,perm, "Query", true)
+    @Html.ToolButton("btnCreate", "icon-add", Suggestion.Create, perm, "Create", true)
+    @Html.ToolButton("btnEdit", "icon-edit", Suggestion.Edit, perm, "Edit", true)
+    @Html.ToolButton("btnDetails", "icon-details", Suggestion.Details, perm, "Details", true)
+    @Html.ToolButton("btnDelete", "icon-remove", Suggestion.Delete, perm, "Delete", true)
+</div>
+
+<table id="List"></table>
+<div id="Pager"></div>
+<div id="modalwindow" class="easyui-window" data-options="modal:true,closed:true,minimizable:false,shadow:false"></div>
+@Html.Partial("~/Views/Shared/_Partial_AutoGrid.cshtml")
+<script type="text/javascript">
+    //ifram 返回
+    function frameReturnByClose() {
+        $("#modalwindow").window('close');
+    }
+    function frameReturnByReload(flag) {
+        if (flag)
+            $("#List").datagrid('load');
+        else
+            $("#List").datagrid('reload');
+    }
+    function frameReturnByMes(mes) {
+        $.messageBox5s('', mes);
+    }
+
+    $(function () {
+        $('#List').datagrid({
+            url: '/MIS/Article/GetList',
+            width: $(window).width() - 10,
+            methord: 'post',
+            height: $(window).height() - 35,
+            fitColumns: true,
+            sortName: 'Id',
+            sortOrder: 'desc',
+            idField: 'Id',
+            pageSize: 15,
+            pageList: [15, 20, 30, 40, 50],
+            pagination: true,
+            striped: true, //奇偶行是否区分
+            singleSelect: true,//单选模式
+            columns: [[
+                { field: 'Id', title: 'ID', width: 40, hidden: true },
+                { field: 'ChannelId', title: '频道编号', width: 40 },
+                { field: 'CategoryId', title: '分类编号', width: 200 },
+                { field: 'Title', title: '标题', width: 140 },
+                { field: 'Sort', title: '排序', width: 40, align: 'center' },
+                { field: 'ImageUrl', title: '图片', width: 40, align: 'center' },
+                { field: 'BodyContent', title: '描述', width: 60, align: 'center' },
+                { field: 'Click', title: '点击率', width: 40, align: 'center' },
+                { field: 'CheckFlag', title: '审核标志', width: 40, align: 'center' },
+                { field: 'CreateTime', title: '创建时间', width: 65, align: 'center' },
+                { field: 'Creater', title: '创建人', width: 65, align: 'center' },
+                { field: 'CheckTime', title: '审核时间', width: 65, align: 'center' },
+                { field: 'Checker', title: '审核人', width: 65, align: 'center' }
+            ]]
+        });
+    });
+
+</script>
+
+@*operation*@
+<script type="text/javascript">
+    $(function () {
+        $("#btnCreate").click(function () {
+            $("#modalwindow").html("<iframe width='100%' height='98%' scrolling='no' frameborder='0'' src='/MIS/Article/Create'></iframe>");
+            $("#modalwindow").window({ title: '@Suggestion.Create', width: 700, height: 500, iconCls: 'icon-add' }).window('open');
+        });
+        $("#btnEdit").click(function () {
+            var row = $('#List').datagrid('getSelected');
+            if (row != null) {
+                $("#modalwindow").html("<iframe width='100%' height='99%'  frameborder='0' src='/MIS/Article/Edit?id=" + row.Id + "&Ieguid=" + GetGuid() + "'></iframe>");
+                $("#modalwindow").window({ title: '@Suggestion.Edit', width: 700, height: 530, iconCls: 'icon-edit' }).window('open');
+            } else { $.messageBox5s('@Suggestion.Tip', '@Suggestion.PlaseChooseToOperatingRecords'); }
+        });
+        $("#btnDetails").click(function () {
+            var row = $('#List').datagrid('getSelected');
+            if (row != null) {
+
+                $("#modalwindow").html("<iframe width='100%' height='98%' scrolling='no' frameborder='0' src='/MIS/Article/Details?id=" + row.Id + "&Ieguid=" + GetGuid() + "'></iframe>");
+                $("#modalwindow").window({ title: '@Suggestion.Details', width: 700, height: 500, iconCls: 'icon-details' }).window('open');
+            } else { $.messageBox5s('@Suggestion.Tip', '@Suggestion.PlaseChooseToOperatingRecords'); }
+        });
+        $("#btnQuery").click(function () {
+            var queryStr = $("#txtQuery").val();
+            //如果查询条件为空默认查询全部
+            if (queryStr == null) {
+                queryStr = "%";
+            }
+            $('#List').datagrid({
+                url: '/MIS/Article/GetList?queryStr=' + encodeURI(queryStr)
+            });
+
+        });
+        $("#btnDelete").click(function () {
+            var row = $('#List').datagrid('getSelected');
+            if (row != null) {
+                $.messager.confirm('@Suggestion.Tip', '@Suggestion.YouWantToDeleteTheSelectedRecords', function (r) {
+                    if (r) {
+                        $.post("/MIS/Article/Delete?id=" + row.Id, function (data) {
+                            if (data.Type == 1)
+                                $("#List").datagrid('load');
+                            $.messageBox5s('@Suggestion.Tip', data.Message);
+                        }, "json");
+
+                    }
+                });
+            } else { $.messageBox5s('@Suggestion.Tip', '@Suggestion.PlaseChooseToOperatingRecords'); }
+        });
+
+        function GetGuid() {
+            return $.guid++;
+        }
+    });
+</script>
+
 
